My second commit to check git puch from master to master and also check the gitt diff and git diff wroked now i will check git push

--- a/chat/clientio.html
+++ b/chat/clientio.html
@@ -109,7 +109,7 @@
         <form id="set-nickname" class="wrap">
           <p>Please type in your nickname and press enter.</p>
           <input id="nick">
-          <p id="nickname-err" style="visibility:hidden;">Nickname already in use</p>
+          <p id="nickname-err" style="visibility:hidden;">Nickname already in use...</p>
         </form>
       </div>
       <!--<div id="connecting">
