Now i am checking git merge by changing one file in master branch and myFirstBranch...

--- a/chat/clientio.html
+++ b/chat/clientio.html
@@ -107,7 +107,7 @@
     <div id="chat">
       <div id="nickname">
         <form id="set-nickname" class="wrap">
-          <p>Please type in your nickname and press enter.</p>
+          <p>Please give your nickname and press enter.</p>
           <input id="nick">
           <p id="nickname-err" style="visibility:hidden;">Nickname already in use...</p>
         </form>
