Now i have change the index.html file in chat directory and committing after this i will test git merge between master and myFirstBranch branches

--- a/chat/index.html
+++ b/chat/index.html
@@ -54,6 +54,7 @@
 <ul id="incomingChatMessages"></ul>
 <br />
 <form>
+<!-- user types msg here and press enter to send the message -->
 <input type="text" id="outgoingChatMessage">
 </form>
 </body>
