this is my commit in master for clientio.html for merge testing

--- a/chat/clientio.html
+++ b/chat/clientio.html
@@ -115,6 +115,7 @@
       <!--<div id="connecting">
         <div class="wrap">Connecting to server</div>
       </div>-->
+	  <!-- this is in master -->
       <div id="messages">
         <div id="nicknames"></div>
         <div id="lines" style="height:450px; overflow-y:auto;"></div>
