this is commit in myfirst branch for index.html and merge in master branch

--- a/chat/index.html
+++ b/chat/index.html
@@ -54,7 +54,7 @@
 <ul id="incomingChatMessages"></ul>
 <br />
 <form>
-<!-- user types msg here and press enter to send the message -->
+<!-- user types msg here and press enter to send the message / for second time-->
 <input type="text" id="outgoingChatMessage">
 </form>
 </body>
